--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,23 @@
 {
     "name": "TVTropes Helper",
-    "description": "Assist tool for TVTropes",
+    "description": "Message notifier for TVTropes",
     "version": "1.0",
     "manifest_version": 3,
-    "permissions": ["storage", "activeTab", "scripting", "tabs", "management", "background"],
-    "host_permissions": ["http://*/*", "https://*/*"],
+    "permissions": ["storage", "activeTab", "scripting", "tabs", "management", "background", "alarms"],
+    "host_permissions": ["https://tvtropes.org/"],
     "content_scripts": [ 
         { 
-            "js": ["jquery-3.6.0.js", "background.js"], 
+            "js": ["jquery-3.6.0.js"], 
             "matches": [ "http://*/*", "https://*/*"] 
         }
     ],
+    "background": {
+        "service_worker": "background.js"
+    },
     "options_page": "options.html",
     "action": {
         "default_popup": "popup.html",
-        "default_title": "Popup",
+        "default_title": "TVTropes Helper",
         "default_icon": {
             "16": "/icons/default/icon16.png",
             "32": "/icons/default/icon32.png",
